2000-02-21  Vadim Zaliva  <lord@crocodile.org>

	* jikesapi.h (class JikesAPI): reader and writer factories removed - they are 
	duplicating read/write methods functionality. read/write made virtual.

	* jikesapi.cpp:
	* jikesapi.h: method of readers and writers renamed to follow
	project naming conventions.

	* jikes.cpp (main): removed conditional creation of JikesAPI.
	* jikesapi.cpp: indentation, comsetics.
	* jikesapi.h: indentation, comsetics.

2000-02-21  Martin York <myork202@mail.mwfree.net>

	Some Vadim remarks taken in account:

	1) The  default read object now always opens files with the mode "rb".
	2) The classes to manipulate files have been renamed:                           
                                                                                
	FileReader           (Reader was causing problems)                              
        DefaultFileReader                                                               
                                                                                
        FileWriter           (Writer was causing problems)                              
        DefaultFileWriter                                                               
                                                                                
        3) Small fixes that I had overlooked in the UNIX code                           
        since I was working on an NT box.                                           

	* jikes.cpp: If no object of type jikesAPI is defined then main
 	will create an object of JikesAPI and use this as the default.

	* jikesapi.h 
	* jikesapi.cpp: Made the methods JikesAPI::read() and
 	JikesAPI::write() non virtual. These methods now do error
 	checking.
                                                                                
        The methods 
	
	JikesAPI::readerFactory() and                                   
        JikesAPI::writerFactory() 
