@@ -21,7 +21,7 @@
 #include "jikesapi.h"
 
 #if defined(HAVE_LIB_ICU_UC)
-# include <ucnv.h>
+# include <unicode/ucnv.h>
 #elif defined(HAVE_ICONV_H)
 # include <iconv.h>
 #endif
